<resources>
    <string name="app_name" translatable="false">Skydive Logbook</string>
    <string name="hello" translatable="false">Hello World!</string>
    <string name="jumpNr">Jump Number</string>
    <string name="date">Date</string>
    <string name="dropzone">Dropzone</string>
    <string name="plane">Plane</string>
    <string name="equipment">Equipment</string>
    <string name="exitAlt">Exit Altitude</string>
    <string name="fallTime">Freefall Time</string>
    <string name="canopyAlltitude" translatable="false">Canopy Altitude</string>
    <string name="comments">Comments</string>
    <string name="jumpNumberHint" translatable="false">34</string>
    <string name="dateHint" translatable="false">16/04/2018</string>
    <string name="dropzoneHint" translatable="false">OFSK</string>
    <string name="planeHint" translatable="false">Caravan</string>
    <string name="equipmentHint" translatable="false">Pulse 170</string>
    <string name="exitAltitudeHint" translatable="false">12500ft</string>
    <string name="freefallTimeHint" translatable="false">61s</string>
    <string name="CanopyAltHint" translatable="false">3500ft</string>
    <string name="CommentsHint" translatable="false">#Skygod #WheresTheBreakes?</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="emailEmpty">Error: E-mail can not be empty!</string>
    <string name="passwordEmpty">Error: Password can not be empty!</string>
    <string name="authError">Error: Authentication failed!</string>
    <string name="logIn">Log in</string>
    <string name="newUser">Don\'t have an account?</string>
    <string name="existingUser">Already have an account?</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="firstNameEmpty">Error: First name can not be empty!</string>
    <string name="lastNameEmpty">Error: Last name can not be empty!</string>
    <string name="confirmPassEpty">Error: Confirm password can not be empty!</string>
    <string name="passDontMatch">Error: Passwords don\'t match!</string>
    <string name="boldRegister">Register.</string>
    <string name="boldLogin">Log in.</string>
    <string name="imageDescription">Image of app logo</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="weakPassword">Error: The password is too weak, it should be atleast 6 characters long</string>
    <string name="invalidEmail">Error: Not an valid E-mail!</string>
    <string name="userNotExists">Error: The user does not exists!</string>
    <string name="emailInUse">Error: The E-mail is already in use!</string>
    <string name="invalidCred">Error: Not correct password or email!</string>
    <string name="tooManyReq">Error: Blocked all requests from this device due to unusual activity, try again later!</string>
    <string name="sendEmail">Send Email</string>
    <string name="resetPassword">Reset Password</string>
    <string name="emailSent">An email has been sent to your email address</string>
    <string name="age">Age</string>
    <string name="yearsInSport">Years in sport</string>
    <string name="jumps">Jumps</string>
    <string name="primaryDropzone">Primary Dropzone</string>
    <string name="cert">Certificate</string>
    <string name="uploading">Uploading picture</string>
    <string name="uploadedProgress">Uploaded</string>
    <string name="uploaded">Uploaded</string>
    <string name="uploadFailed">Upload failed</string>
    <string name="settingsSaved">Settings saved</string>
    <string name="learner" translatable="false">Learner</string>

    <!-- sup -->
    <string name="approved">Approved</string>
    <string name="notApproved">Waiting</string>
    <string name="Signature">Signature</string>
    <string name="SignIt">Sign jump</string>
    <string name="pickSignature">Pick User to sign jump</string>
    <string name="license">License Number</string>
    <string name="certificate">Certificate Letter</string>
    <string name="dob">Date of Birth(dd/mm/yyyy)</string>
    <string name="certificateEmpty">Error: Certificate can not be empty!</string>
    <string name="licenseEmpty">Error: License can not be empty!</string>
    <string name="dobEmpty">Error: Date of birth can not be empty!</string>
    <string name="licenseWrongLength">Error: License is not correct length!</string>
    <string name="notValidDate">Error: Not valid date!</string>
    <string name="invalidUser">Invalid user</string>

    <string-array name="certificateEditString">
        <item>Learner</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string name="settings">Settings</string>
    <string name="allowNotifications">Allow Notifications</string>
    <string name="chooseLanguage">Choose Language</string>
    <string name="changeLanguage">Change Language</string>
    <string name="logOut">Log out</string>
    <string name="english">English</string>
    <string name="norwegian">Norwegian</string>
    <string name="logNewJump">Log new jump</string>
    <string name="signatureRequests">Signature requests</string>
    <string name="emptyJumpNr">Error: JumpNr can not be empty!</string>
    <string name="emptyDate">Error: Date can not be empty!</string>
    <string name="emptyDz">Error: Dropzone can not be empty!</string>
    <string name="emptyPlane">Error: Plane can not be empty!</string>
    <string name="emptyEquipment">Error: Equipment can not be empty!</string>
    <string name="emptyExit">Error: Exit Altitude can not be empty!</string>
    <string name="emptyFreefall">Error: Freefall time can not be empty!</string>
    <string name="emptyCanopy">Error: Canopy Altitude can not be empty!</string>
    <string name="emptySignatureUserID">Error: Signature user id can not be empty!</string>
    <string name="emptySignature">Error: Signature can not be empty!</string>
    <string name="newRequest">New Request!</string>
    <string name="approveThis">wants yout to approve jump nr:</string>
    <string name="jumpApproved">Jump nr</string>
    <string name="hasApproved">has been approved!</string>
    <string name="contentApproved">Click here to see the jump</string>
</resources>
